Add requirement of psutil and humanize

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 bagit>=1.7.0
 colorama>=0.3.0
+humanize>=0.5.1
 keyring>=12.2.0
 lxml>=4.2.5
 plac>=1.0.0
+psutil>=5.4
 requests>=2.19.1
 setuptools>=40.4.2
 termcolor>=1.1.0
