Add some comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,8 @@
 name             = eprints2bags
 version          = file:VERSION.txt
 summary          = Package up EPrints materials as BagIt bags
+description      = This is a program to encapsulate the process of downloading
+  content from EPrints and encapsulating it as BagIt-format bags.
 author           = Michael Hucka, Betsy Coles
 author_email     = mhucka@caltech.edu
 maintainer       = Michael Hucka
@@ -21,11 +23,10 @@ maintainer_email = mhucka@caltech.edu
 license          = BSD 3-clause
 license_files    = LICENSE
 url              = https://github.com/caltechlibrary/eprints2bags
+# The remaining items below are used by PyPI.
 project_urls     =
   Source Code    = https://github.com/caltechlibrary/eprints2bags
   Bug Tracker    = https://github.com/caltechlibrary/eprints2bags/issues
-description      = This is a program to encapsulate the process of downloading
-  content from EPrints and encapsulating it as BagIt-format bags.
 keywords         = EPrints, archives, preservation, BagIt
 classifiers      =
   Development Status :: 5 - Production/Stable
