Put version number directly into setup.cfg instead of separate file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,15 +4,11 @@
 # @author  Michael Hucka <mhucka@caltech.edu>
 # @license Please see the file named LICENSE in the project directory
 # @website https://github.com/caltechlibrary/eprints2bags
-#
-# Note: the current version number is maintained in the file VERSION.txt
-# Don't forget to update VERSION.txt when making new releases!
-#
 # =============================================================================
 
 [metadata]
 name             = eprints2bags
-version          = file:VERSION.txt
+version          = 1.9.0
 summary          = Package up EPrints materials as BagIt bags
 description      = This is a program to encapsulate the process of downloading
   content from EPrints and encapsulating it as BagIt-format bags.
