--- a/setup.cfg
+++ b/setup.cfg
@@ -9,13 +9,10 @@
 [metadata]
 name             = eprints2bags
 version          = 1.9.0
-summary          = Package up EPrints materials as BagIt bags
 description      = This is a program to encapsulate the process of downloading
   content from EPrints and encapsulating it as BagIt-format bags.
 author           = Michael Hucka, Betsy Coles
 author_email     = mhucka@caltech.edu
-maintainer       = Michael Hucka
-maintainer_email = mhucka@caltech.edu
 license          = BSD 3-clause
 license_files    = LICENSE
 url              = https://github.com/caltechlibrary/eprints2bags
@@ -45,7 +42,7 @@ long_description = file:README.md
 long_description_content_type = text/markdown
 
 [options]
-packages = eprints2bags
+packages = find:
 scripts  = bin/eprints2bags
 zip_safe = False
 python_requires = >= 3.5
