Ignore temp stuff created by distribution process

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ __pycache__
 # .............................................................................
 
 eprints2bags.egg-info
+dist
+build
+*.bak
