--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-bagit>=1.7.0
-colorama>=0.3.0
-dateparser>=0.7.0
-humanize>=0.5.1
-keyring>=12.2.0
-keyrings.alt>=3.1
-lxml>=4.2.5
-plac>=1.0.0
-psutil>=5.4
-requests>=2.19.1
-termcolor>=1.1.0
-urllib3>=1.23
-validators>=0.12.3
+bagit        >= 1.7.0
+dateparser   >= 0.7.0
+humanize     >= 0.5.1
+keyring      >= 12.2.0
+keyrings.alt >= 3.1
+lxml         >= 4.2.5
+plac         >= 1.0.0
+psutil       >= 5.4
+pypubsub     >= 4.0.0
+requests     >= 2.19.1
+rich         >= 5.2.0
+setuptools   >= 41.0.1
+sidetrack    >= 1.0.0
+urllib3      >= 1.23
+validators   >= 0.12.3
